static/css/index.css
* {
  font-family: 'Merriweather', serif;
}

html, body {
  margin: 0;
  background: #f2f2f2;
}

#new-recipe {
  position: fixed;
  right: 1.5rem;
  bottom: 1.5rem;
  height: 3.5rem;
  width: 3.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #fff;
  color: #333;
  border: 2px #f2f2f2 solid;
  border-radius: 50%;
  font-size: 2rem;
  text-decoration: none;
  cursor: pointer;
  z-index: 10;
}

#list-wrapper {
  width: 100%;  
}

#searchbar {
  display: flex;
  justify-content: center;
  width: 100%;
  background: #fff;
}

#searchbar input {
  width: 100%;
  max-width: 1200px;
  padding: 1.5rem 0;
  font-size: 1.25rem;
  border: none;
  font-family: 'Open Sans', sans-serif;
}

::placeholder {
  color: #b2b2b2;
}

#recipe-list {
  max-width: 1200px;
  margin: 1.5rem auto;
  padding: 0 1rem;
  padding-bottom: 5rem;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 1.5rem;
  row-gap: 1.5rem;
}

.recipe-card {
  border: 1px #d9d9d9 solid;
  position: relative;
  padding-bottom: 54px; /* make place for footer */
  background: #fff;
  cursor: pointer;
  color: inherit;
  text-decoration: none;
}

.recipe-card img {
  height: 250px;
  width: 100%;
  object-fit: cover;
}

.recipe-card h2 {
  margin: 0;
  padding: 1.5rem;
  font-size: 1.5rem;
  line-height: 1.15;
  font-weight: 300;
  color: #333;
  word-wrap: break-word;
}

.recipe-card h2 span {
  padding-right: 2rem;
}

.recipe-card h2 span::after {
  content: "v";
  color: #fff;
  position: absolute;
  display: inline-flex;
  align-items: center;
  width: 1rem;
  height: 1rem;
  margin-top: .15rem;
  margin-left: .5rem;
  border-radius: 50%;
  font-size: 1.5rem;
  font-weight: 900;
  text-transform: uppercase;
}

.vegetarian::after {
  background: #333;
}

.vegan::after {
  background: #4dbf40;
}

.recipe-card footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  border-top: 1px solid #f2f2f2;
  padding: 1rem 0;
  margin: 0 1rem;
}

.recipe-card footer span {
  margin: 0 .5rem;
  font-size: 12px;
  font-weight: 900;
  text-transform: uppercase;
}

@media only screen and (max-width: 1200px) {
  #recipe-list {
    grid-template-columns: 1fr 1fr;
  }
  #searchbar input {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}
@media only screen and (max-width: 600px) {
  #recipe-list {
    grid-template-columns: 1fr;
  }
  .recipe-card img {
    height: 200px;
  }
}

